CNDE-1943 simplify datamart data merge, addressing SonarQube check